Winnow 0.4 - Editable selection initial offset